--- a/index.html
+++ b/index.html
@@ -5,23 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Some random page</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header class="cover-img">
-      <nav class="nav">
-        <ul class="menu">
-          <li class="menu-items"><a href="index.html">Hem</a></li>
-          <li class="menu-items"><a href="#about">Om</a></li>
-          <li class="menu-items"><a href="#contact">Kontakt</a></li>
-        </ul>
-      </nav>
+      <input id="toggle" type="checkbox" />
 
+      <label for="toggle" class="hamburger">
+        <div class="top-bun"></div>
+        <div class="meat"></div>
+        <div class="bottom-bun"></div>
+      </label>
+      <section class="nav">
+        <aside class="nav-wrapper">
+          <nav class="navigation">
+            <ul class="menu">
+              <li class="menu-items item-one"><a href="index.html">Hem</a></li>
+              <li class="menu-items"><a href="#about">Om</a></li>
+              <li class="menu-items"><a href="#contact">Kontakt</a></li>
+            </ul>
+          </nav>
+        </aside>
+      </section>
       <article class="intro-text">
         <h1>Welcome to nature</h1>
         <p>A journey through time and sheep</p>
         <p>To seee how ...cotton ... is mage, made I mean...</p>
       </article>
+      <section class="arrow">
+        <i class="bi bi-arrow-down-circle-fill arrow-one"></i>
+      </section>
     </header>
 
     <main>
@@ -34,7 +58,8 @@
             src="/assets/profiles/Rakib_Square.png"
             alt="Pictore of a male with glasses"
           />
-          <p>
+          <p class="text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
             Rakib är vår vassaste node-utvecklare och håller ständigt öga på nya
             tekniker
           </p>
@@ -46,7 +71,8 @@
             src="/assets/profiles/Alexandra_Square.png"
             alt="Picture of a women with a cat"
           />
-          <p>
+          <p class="text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
             Alexandra håller reda på alla överallt och ser till att det flyter
           </p>
         </section>
@@ -57,7 +83,10 @@
             src="/assets/profiles/NoPerson_Square.png"
             alt="male avatar ikon"
           />
-          <p>Gör övriga saker...mestadels...</p>
+          <p class="text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
+            Gör övriga saker...mestadels...
+          </p>
         </section>
 
         <section>
@@ -67,12 +96,12 @@
             src="/assets/profiles/Sebastian_Square.png"
             alt="Picture of a male"
           />
-          <span>&#8221;</span>
-
-          <p>
+          <p class="text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
             En av våra utbildare som har stor erfarenhet av ganska många saker
           </p>
         </section>
+        <i class="bi bi-arrow-down-circle-fill arrow-two"></i>
       </article>
     </main>
 
@@ -91,10 +120,16 @@
         </ul>
       </section>
       <section class="contact-info">
-        <ul>
-          <li>Instagram</li>
-          <li>Twitter</li>
-          <li>Facebook</li>
+        <ul class="social-m">
+          <li class="socials-item">
+            <i class="bi bi-instagram icons"></i>Instagram
+          </li>
+          <li class="socials-item">
+            <i class="bi bi-twitter icons"></i>Twitter
+          </li>
+          <li class="socials-item">
+            <i class="bi bi-facebook icons"></i>Facebook
+          </li>
         </ul>
       </section>
     </footer>
