--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <p>To seee how ...cotton ... is mage, made I mean...</p>
       </article>
       <section class="arrow">
-        <i class="bi bi-arrow-down-circle-fill arrow-one"></i>
+        <i class="bi bi-arrow-down-circle-fill arrow-white"></i>
       </section>
     </header>
 
     <main>
       <article id="about" class="team-wrapper">
-        <h2>Träffa laget</h2>
-        <section>
+        <h2 class="t-title">Träffa laget</h2>
+        <section class="team-member t-member-one">
           <h3>Rakib</h3>
           <img
             class="profile-img"
@@ -64,7 +64,7 @@
             tekniker
           </p>
         </section>
-        <section>
+        <section class="team-members t-member-two">
           <h3>Alexandra</h3>
           <img
             class="profile-img"
@@ -76,7 +76,7 @@
             Alexandra håller reda på alla överallt och ser till att det flyter
           </p>
         </section>
-        <section>
+        <section class="team-members t-member-three">
           <h3>Lasse</h3>
           <img
             class="profile-img"
@@ -89,7 +89,7 @@
           </p>
         </section>
 
-        <section>
+        <section class="team-members t-member-four">
           <h3>Sebastian</h3>
           <img
             class="profile-img"
@@ -101,7 +101,7 @@
             En av våra utbildare som har stor erfarenhet av ganska många saker
           </p>
         </section>
-        <i class="bi bi-arrow-down-circle-fill arrow-two"></i>
+        <i class="bi bi-arrow-down-circle-fill arrow-black"></i>
       </article>
     </main>
 
