--- a/index.html
+++ b/index.html
@@ -20,32 +20,30 @@
   </head>
   <body>
     <header class="cover-img">
-      <input id="toggle" type="checkbox" />
 
-      <label for="toggle" class="hamburger">
-        <div class="top-bun"></div>
-        <div class="meat"></div>
-        <div class="bottom-bun"></div>
-      </label>
-      <section class="nav">
-        <aside class="nav-wrapper">
-          <nav class="navigation">
-            <ul class="menu">
-              <li class="menu-items item-one"><a href="index.html">Hem</a></li>
-              <li class="menu-items"><a href="#about">Om</a></li>
-              <li class="menu-items"><a href="#contact">Kontakt</a></li>
-            </ul>
-          </nav>
-        </aside>
+      <section class="header">
+ 
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a href="index.html">Hem</a></li>
+          <li><a href="#about">Om</a></li>
+          <li><a href="#contact">Kontakt</a></li>
+        </ul>
       </section>
-      <article class="intro-text">
+
+       <article class="intro-text">
         <h1>Welcome to nature</h1>
         <p>A journey through time and sheep</p>
         <p>To seee how ...cotton ... is mage, made I mean...</p>
       </article>
       <section class="arrow">
-        <i class="bi bi-arrow-down-circle-fill arrow-white"></i>
+        <a href="#about"> <i class="bi bi-arrow-down-circle-fill arrow-white"
+          ></a
+        ></i>
       </section>
+
+      
     </header>
 
     <main>
@@ -101,7 +99,12 @@
             En av våra utbildare som har stor erfarenhet av ganska många saker
           </p>
         </section>
-        <i class="bi bi-arrow-down-circle-fill arrow-black"></i>
+
+   <a href="#contact "
+   class="arrow-arrow">
+          <i class="bi bi-arrow-down-circle-fill arrow-black"
+            ></a></i>
+        
       </article>
     </main>
 
