--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
 
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
     <header class="cover-img">
-
       <section class="header">
- 
         <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <label class="menu-icon" for="menu-btn"
+          ><span class="navicon"></span
+        ></label>
         <ul class="menu">
           <li><a href="index.html">Hem</a></li>
           <li><a href="#about">Om</a></li>
@@ -32,18 +32,16 @@
         </ul>
       </section>
 
-       <article class="intro-text">
+      <article class="intro-text">
         <h1>Welcome to nature</h1>
         <p>A journey through time and sheep</p>
         <p>To seee how ...cotton ... is mage, made I mean...</p>
       </article>
       <section class="arrow">
-        <a href="#about"> <i class="bi bi-arrow-down-circle-fill arrow-white"
-          ></a
-        ></i>
+        <a href="#about">
+          <i class="bi bi-arrow-down-circle-fill arrow-white"></i
+        ></a>
       </section>
-
-      
     </header>
 
     <main>
@@ -100,11 +98,9 @@
           </p>
         </section>
 
-   <a href="#contact "
-   class="arrow-arrow">
-          <i class="bi bi-arrow-down-circle-fill arrow-black"
-            ></a></i>
-        
+        <a href="#contact " class="arrow-arrow">
+          <i class="bi bi-arrow-down-circle-fill arrow-black"></i
+        ></a>
       </article>
     </main>
 
@@ -123,7 +119,7 @@
         </ul>
       </section>
       <section class="contact-info">
-        <ul class="social-m">
+        <ul class="social-media">
           <li class="socials-item">
             <i class="bi bi-instagram icons"></i>Instagram
           </li>
