--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header class="cover-img">
-      <section class="header">
+      <section class="nav">
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"
           ><span class="navicon"></span
@@ -44,7 +44,7 @@
       </section>
     </header>
 
-    <main>
+    <main class="main-continer">
       <article id="about" class="team-wrapper">
         <h2 class="t-title">Träffa laget</h2>
         <section class="team-member t-member-one">
