--- a/index.html
+++ b/index.html
@@ -98,27 +98,27 @@
           </p>
         </section>
 
-        <a href="#contact " class="arrow-arrow">
+        <a href="#contact " class="arrow-last">
           <i class="bi bi-arrow-down-circle-fill arrow-black"></i
         ></a>
       </article>
     </main>
 
-    <footer id="contact" class="contact-wrapper">
-      <section class="contact-info">
+    <footer id="contact" class="contact">
+      <section class="contact__info">
         <ul>
           <li>Tegel Consulting AB</li>
           <li>Agatvägen 18</li>
           <li>168 60 Bromma</li>
         </ul>
       </section>
-      <section class="contact-info">
+      <section class="contact__info">
         <ul>
           <li>info at tegelconsulting.se</li>
           <li>070-123 456 78</li>
         </ul>
       </section>
-      <section class="contact-info">
+      <section class="contact__info">
         <ul class="social-media">
           <li class="socials-item">
             <i class="bi bi-instagram icons"></i>Instagram
