--- a/index.html
+++ b/index.html
@@ -37,68 +37,68 @@
         <p>A journey through time and sheep</p>
         <p>To seee how ...cotton ... is mage, made I mean...</p>
       </article>
-      <section class="arrow">
+      <section class="arrow-primary">
         <a href="#about">
-          <i class="bi bi-arrow-down-circle-fill arrow-white"></i
+          <i class="bi bi-arrow-down-circle-fill arrow-primary__white"></i
         ></a>
       </section>
     </header>
 
-    <main class="main-continer">
-      <article id="about" class="team-wrapper">
-        <h2 class="t-title">Träffa laget</h2>
-        <section class="team-member t-member-one">
+    <main class="main-container">
+      <article id="about" class="team">
+        <h2 class="team__title t-title">Träffa laget</h2>
+        <section class="team__members t-member-one">
           <h3>Rakib</h3>
           <img
-            class="profile-img"
+            class="team__profile-img"
             src="/assets/profiles/Rakib_Square.png"
             alt="Pictore of a male with glasses"
           />
-          <p class="text-boxes">
-            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
+          <p class="team__text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right team__quote"></i>
             Rakib är vår vassaste node-utvecklare och håller ständigt öga på nya
             tekniker
           </p>
         </section>
-        <section class="team-members t-member-two">
+        <section class="team__members t-member-two">
           <h3>Alexandra</h3>
           <img
-            class="profile-img"
+            class="team__profile-img"
             src="/assets/profiles/Alexandra_Square.png"
             alt="Picture of a women with a cat"
           />
-          <p class="text-boxes">
-            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
+          <p class="team__text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right team__quote"></i>
             Alexandra håller reda på alla överallt och ser till att det flyter
           </p>
         </section>
-        <section class="team-members t-member-three">
+        <section class="team__members t-member-three">
           <h3>Lasse</h3>
           <img
-            class="profile-img"
+            class="team__profile-img"
             src="/assets/profiles/NoPerson_Square.png"
             alt="male avatar ikon"
           />
-          <p class="text-boxes">
-            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
+          <p class="team__text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right team__quote"></i>
             Gör övriga saker...mestadels...
           </p>
         </section>
 
-        <section class="team-members t-member-four">
+        <section class="team__members t-member-four">
           <h3>Sebastian</h3>
           <img
-            class="profile-img"
+            class="team__profile-img"
             src="/assets/profiles/Sebastian_Square.png"
             alt="Picture of a male"
           />
-          <p class="text-boxes">
-            <i class="fa-sharp fa-solid fa-quote-right quote"></i>
+          <p class="team__text-boxes">
+            <i class="fa-sharp fa-solid fa-quote-right team__quote"></i>
             En av våra utbildare som har stor erfarenhet av ganska många saker
           </p>
         </section>
 
-        <a href="#contact " class="arrow-last">
+        <a href="#contact " class="arrow-secondary">
           <i class="bi bi-arrow-down-circle-fill arrow-black"></i
         ></a>
       </article>
@@ -120,14 +120,14 @@
       </section>
       <section class="contact__info">
         <ul class="social-media">
-          <li class="socials-item">
-            <i class="bi bi-instagram icons"></i>Instagram
+          <li class="social-media__item">
+            <i class="bi bi-instagram social-media__icons"></i>Instagram
           </li>
-          <li class="socials-item">
-            <i class="bi bi-twitter icons"></i>Twitter
+          <li class="social-media__item">
+            <i class="bi bi-twitter social-media__icons"></i>Twitter
           </li>
-          <li class="socials-item">
-            <i class="bi bi-facebook icons"></i>Facebook
+          <li class="social-media__item">
+            <i class="bi bi-facebook social-media__icons"></i>Facebook
           </li>
         </ul>
       </section>
