--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </section>
 
         <a href="#contact " class="arrow-secondary">
-          <i class="bi bi-arrow-down-circle-fill arrow-black"></i
+          <i class="bi bi-arrow-down-circle-fill arrow-secondary__black"></i
         ></a>
       </article>
     </main>
